# Honeycomb-Optimized-Computing

./: .gitignore  NECTAR_SPEC.md  README.md  __init__.py  bridge.py  core.py  memory.py  metrics.py  nectar.py  pyproject.toml  requirements-dev.txt  requirements.txt  resilience.py  swarm.py
benchmarks/: ANALISIS_BENCHMARK_PESADOS.md  ANALISIS_RENDER.md  __init__.py  bench_core.py  bench_heavy_mixed.py  bench_nectar.py  bench_swarm_render.py  workload_heavy.py  workload_render3d.py
tests/: __init__.py  conftest.py  test_bridge.py  test_core.py  test_heavy.py  test_nectar.py
